# Mastering-RUST-Second-Edition

./: README.md
Chapter01/: arrays  arrays.rs  closures.rs  enum_methods.rs  enums.rs  exercise_word_counter.rs  first_program.rs  for_loop.rs  for_loops.rs  function_mut  function_mut.rs  functions.rs  greet.rs  hashmaps.rs  if_assign.rs  if_else.rs  if_else_no_value.rs  loop_labels.rs  loops.rs  match_expression  match_expression.rs  slices  slices.rs  strings.rs  struct_methods.rs  structs.rs  tuple_struct.rs  tuples.rs  unit_struct  unit_struct.rs  use.rs  variables  variables.rs  vec.rs  while.rs
Chapter02/: file_as_module.rs  mod_within.rs
Chapter02/cargo_manifest_example/: Cargo.toml
Chapter03/: first_unit_test.rs  ignored_test.rs  panic_test.rs  silly_loop.rs
Chapter04/: creating_generic_vec.rs  destructure_enum.rs  destructure_func_param.rs  destructure_struct.rs  expressions.rs  foo.txt  generic_enum.rs  generic_function.rs  generic_struct.rs  generic_struct_impl.rs  if_expr.rs  impl_trait_both.rs  impl_trait_closure.rs  impl_trait_syntax.rs  let_pattern_wrapper.rs  let_ref_mut.rs  refutable_pattern.rs  scopes.rs  trait_bound_basics.rs  trait_bound_basics_fixed.rs  trait_bound_functions.rs  trait_bound_intro.rs  trait_bound_intro_fixed.rs  trait_bounds_types.rs  trait_composition.rs  trait_inheritance.rs  trait_objects.rs  type_alias.rs  unusable_str.rs  using_generic_func.rs  using_generic_vec.rs
Chapter05/: borrowing_basics.rs  (+45 more)
Chapter10/native_counter/native/: Cargo.toml
Chapter10/native_counter/native/src/: lib.rs
Chapter13/linksnap/: Cargo.toml  test_server.sh
Chapter13/linksnap/src/: links.rs  main.rs  route_handlers.rs  state.rs
(+239 files in other folders)
